--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,8 @@ devtools::install_github("neurogenomics/scFlowExample")
 
 ## Setup the dataset
 
+The current dataset uses `TEINH15`, `TEINH19`, `MGL1`, `MOL1` cells. For a list of available cell types please visit [this link](http://mousebrain.org/celltypes/). Use the following codes only if you want to use different cell types.
+
 ```{r}
 # create a temporary directory
 td <- tempdir()
@@ -53,52 +55,11 @@ usethis::use_data(indvExp, overwrite = TRUE)
 
 ## Save the data to file
 
-It's not really neccesary to run the above code, you could just run the following codes and continue from here.
+You could just run the following codes and continue from here. The following codes will generate scFlowExample dataset in 10x genomics Cellranger output format, a `Manifest.txt` file containing data path for individual samples and a `SampleSheet.tsv` containing sample metadata.
 
 ```{r}
-indvExp <- scFlowExamples::indvExp
-
-# Create a folder to store the 10xGenomics matrix format data
-output_path <- "~/tmp_ZeiselSCFLOW"
-dir.create(output_path)
-
-
-for (i in 1:length(indvExp)) {
-  x <- indvExp[[i]]$exp
-  
-  # Convert gene symbols from mouse to human
-  # Limit genes to Mouse:Human orthologs
-  # Convert human gene symbols to Ensembl gene IDs
-  
-  x <- mouse_symbol_to_human_ensembl(x)
-  
-  # Write the data
-
-  output_file <- sprintf("%s/individual_%s", output_path, i)
-  DropletUtils::write10xCounts(output_file, x,
-    barcodes = colnames(x), gene.id = rownames(x),
-    gene.symbol = rownames(x), gene.type = "Gene Expression", overwrite = TRUE,
-    type = "auto", genome = "unknown", version = "3"
-  )
-}
+write_data()
+write_scflow_manifest(indvExp)
+write_scflow_samplesheet(indvExp)
 ```
 
-## Create the manifesto file for _scflow_
-
-```{r}
-y <- ids::proquint(n = length(indvExp), n_words = 1L, use_cache = TRUE, use_openssl = FALSE)
-z <- data.frame(key = y, filepath = sprintf("%s/%s", output_path, list.files(output_path, pattern = "individual")), stringsAsFactors = FALSE)
-write.table(z, file = sprintf("%s/Manifest.txt", output_path), row.names = FALSE, col.names = TRUE, quote = FALSE, sep = "\t")
-```
-
-## Create the sample sheet for _scflow_
-
-```{r}
-dx <- unlist(lapply(indvExp, FUN = function(x) {
-  return(x$dx)
-}))
-sex <- sample(c("M", "F"), length(dx), replace = T)
-age <- sample(1:100, length(dx))
-sample_sheet <- cbind(manifest = z[, 1], individual = rownames(z), diagnosis = dx, sex = sex)
-write.table(sample_sheet, file = sprintf("%s/SampleSheet.tsv", output_path), row.names = FALSE, col.names = TRUE, quote = FALSE, sep = "\t")
-```
