--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,10 @@ BiocManager::install("DropletUtils")
 install.packages("ids")
 
 devtools::install_github("NathanSkene/One2One")
+
+devtools::install_github(repo = "hhoeflin/hdf5r")
+
+devtools::install_github(repo = "mojaveazure/loomR", ref = "develop")
 ```
 
 ## Install the dataset repository
