modified README.md and README.Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,8 +62,9 @@ usethis::use_data(indvExp, overwrite = TRUE)
 You could just run the following codes and continue from here. The following codes will generate scFlowExample dataset in 10x genomics Cellranger output format, a `Manifest.txt` file containing data path for individual samples and a `SampleSheet.tsv` containing sample metadata.
 
 ```{r}
-write_data()
-write_scflow_manifest(indvExp)
-write_scflow_samplesheet(indvExp)
+library(scFlowExamples)
+write_data(output_dir = "full/path/to/output/dir")
+write_scflow_manifest(indvExp, output_dir = "full/path/to/output/dir")
+write_scflow_samplesheet(indvExp, output_dir = "full/path/to/output/dir")
 ```
 
