added downsampled data and function to downsample

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,11 +51,43 @@ unzip(tf)
 
 allExp <- prep_zeisel2018(path = tf)
 keptExp <- merge_zeisel_celltypes(allExp, useCells = c("TEINH15", "TEINH19", "MGL1", "MOL1"))
-indvExp <- split_celltypes_byIndv(keptExp, joinCells = c("TEINH15", "TEINH19"), nCases = 3, jointName = "Teinh")
+indvExp <- split_celltypes_byIndv(keptExp, joinCells = c("TEINH15", "TEINH19"), 
+                                  nCases = 3, jointName = "TEINH")
 
 # Save dataset so that it can be used easily
 usethis::use_data(indvExp, overwrite = TRUE)
 ```
+
+## Downsampling the dataset
+
+The user can downsample the dataset by reducing the cell number and gene number using the following commands. To downsample the dataset use the `keptExp` object created in the previous step.
+
+#### To downsample cells only 
+
+```{r}
+keptExp_ds <- downsample_cells(keptExp = keptExp,
+                               prop_cell = c(0.5,0.5,0.05,0.02))
+
+indvExp_ds <- split_celltypes_byIndv(keptExp_ds, joinCells = c("TEINH15", "TEINH19"), 
+                                              nCases = 3, jointName = "TEINH")
+
+# Save dataset so that it can be used easily
+usethis::use_data(indvExp_ds, overwrite = TRUE)
+```
+
+#### To downsample both cells and genes
+
+```{r}
+keptExp_ds_4K <- downsample_cells(keptExp = keptExp,
+                                    prop_cell = c(0.5,0.5,0.05,0.02),
+                                    n_top_genes = 4000)
+indvExp_ds_4K <- split_celltypes_byIndv(keptExp_ds_4K, joinCells = c("TEINH15", "TEINH19"), 
+                                                        nCases = 3, jointName = "TEINH")
+
+# Save dataset so that it can be used easily
+usethis::use_data(indvExp_ds_4K, overwrite = TRUE)
+```
+
 
 ## Save the data to file
 
@@ -63,7 +95,18 @@ You could just run the following codes and continue from here. The following cod
 
 ```{r}
 library(scFlowExamples)
-write_data(output_dir = "full/path/to/output/dir")
+
+#To use the full size dataset
+data("indvExp", package = "scFlowExamples")  
+
+#To use a downsampled dataset
+data("indvExp_ds", package = "scFlowExamples") #This dataset contains all genes (~29000)
+
+#To use a downsampled dataset with 4000 genes
+data("indvExp_ds_4K", package = "scFlowExamples") 
+
+#To write out the data in 10X genomics format
+write_data(indvExp, output_dir = "full/path/to/output/dir")
 write_scflow_manifest(indvExp, output_dir = "full/path/to/output/dir")
 write_scflow_samplesheet(indvExp, output_dir = "full/path/to/output/dir")
 ```
